[gd_scene load_steps=6 format=3 uid="uid://dhpvxpw0ne1pu"]

[ext_resource type="Texture2D" uid="uid://bnub53glj5dr7" path="res://icon.svg" id="1_db084"]
[ext_resource type="Script" uid="uid://cuu8fgrceb8mf" path="res://scripts/enemy_1.gd" id="1_lsxte"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jv4hc"]
radius = 779.434

[sub_resource type="CircleShape2D" id="CircleShape2D_j430y"]
radius = 172.29

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lsxte"]
radius = 56.0
height = 118.0

[node name="enemy_1" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
motion_mode = 1
script = ExtResource("1_lsxte")
BASE_SPEED = 700

[node name="player_detection" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="player_detection"]
shape = SubResource("CircleShape2D_jv4hc")
debug_color = Color(0.30044, 0.605689, 0.477131, 0.42)

[node name="attack_range" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="attack_range"]
shape = SubResource("CircleShape2D_j430y")
debug_color = Color(0.433764, 0.469862, 0.964986, 0.42)

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_db084")

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_lsxte")
debug_color = Color(0.734994, 0.256135, 0.965533, 0.42)

[connection signal="body_entered" from="player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="player_detection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="attack_range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="attack_range" to="." method="_on_attack_range_body_exited"]
